# snservices1

help/: g.sh  hparse.sh
help/chanserv/: access.help  access.xml  addak.help  addak.xml  akick.help  aop.help  aop.xml  banish.help  clean.help  close.help  delak.help  delak.xml  delete.help  delete.xml  delop.help  delop.xml  founder.xml  getpass.xml  getrealpass.help  id.help  identify.xml  index.help  info.help  listak.help  listop.help  listop.xml  maop.xml  mark.help  mdeop.help  mfounder.help  mkick.help  mlock.help  mlock.xml  modes.help  msop.help  op.xml  opguard.help  sendpass.help  set-akickreasons.help  set-autogreet.xml  (+20 more)
help/gameserv/: index.help
help/infoserv/: index.help  read.help
help/memoserv/: delete.help  mblock.help  nomemo.help  unsend.help
help/nickserv/: acc.help  access.help  addmask.help  drop.help  getrealpass.help  ghost.help  help.help  identify.help  list.help  mark.help  register.help  release.help  set-email.help  set-enforce.help  set-maskadd.help  set-maxmemo.help  set-passwd.help  set-terse.help  set-url.help  setflag.help  vacation.help
help/operserv/: clonerule.help  cloneset.help  index.help  jupe.help  mode.help  ptrigger.help  tempakill.help  uptime.help
help_0_0/: LICENSE  hparse.c
help_0_0/chanserv/: addop.help  addop.xml  akick.xml  chanop.help  chanop.xml  clist.help  deop.help  deop.xml  dmod.help  drop.help  drop.xml  extra.help  extra.xml  founder.help  getpass.help  help.help  identify.help  index.xml  info.xml  invite.help  invite.xml  level.help  levels.help  levels.xml  list.help  list.xml  listak.xml  log.help  maop.help  mdeop.xml  mkick.xml  modelock.help  modes.xml  msop.xml  op.help  register.help  register.xml  restrict.help  restrict.xml  set-autogreet.help  (+16 more)
help_0_0/gameserv/: roll.help
help_0_0/infoserv/: del.help  list.help  post.help
help_0_0/memoserv/: clean.help  forward.help  index.help  list.help  purge.help  read.help  save.help  send.help
help_0_0/nickserv/: activate.help  banish.help  bypass.help  delete.help  getpass.help  id.help  identify-md5.help  index.help  info.help  logout.help  sendpass.help  set-address.help  set-idtime.help  set-iphide.help  set-kill.help  set-noaddop.help  set-showemail.help  set.help  setpass.help
help_0_0/operserv/: autohurt.help  autokill.help  grpop.help  heal.help  ignore.help  override.help  setop.help  trigger.help
ircd/: CHANGES  Config  Config.in  Config.s_err  INSTALL  Makefile  Makefile.dist  Makefile.in  READTHIS.NOW  buildhelp.c  buildhf.c  configure  configure.in  fcrypt.sh  getserver  helpdigest  s_err.defs  setup.h.in  sornet.hlp
ircd/doc/: 19.mu1-New  ADD-TO-IRCRC  CHANGES.NEW  INSTALL  conf.doc  example.conf  example.conf.xml  ipv6.txt  ircd-config.xsd  server-compile-guide
ircd/help/: chanserv.hlp  gameserv.hlp  index.hlp  infoserv.hlp  irc.hlp  local.hlp.dist  memoserv.hlp  nickserv.hlp  oper.hlp  operserv.hlp  sornet.hlp
ircd/include/: channel.h  cio.h  ciofunc.h  class.h  common.h  conf.h  config.h  dbuf.h  getaddrinfo.h  h.h  hash.h  inet.h  ircd.h  msg.h  nameser.h  network.h  numeric.h  options.h.in  patchlevel.h  res.h  resolv.h  resource.h  s_err.h  s_err.h.dist  setup.h.in  snprintf.h  sock.h  socket.h  socket_addr.h  struct.h  sys.h  userload.h  whowas.h
ircd/include/ircd/: cdefs.h  channel.h  match.h  md5.h  memory.h  res.h  send.h  string.h
ircd/md5/: Makefile.in  iface.c  md5.c  md5_iface.h
ircd/src/: Config.c  Makefile  Makefile.in  bsd.c  buildm4  channel.c  channel.c.tmp  chkconf.c  cio_init.c  cio_main.c  class.c  comp.sh  conf.c  crule.c  dbuf.c  fcrypt.c  fin.sh  getaddrinfo.c  hash.c  help.c  ircd.c  list.c  list2.c  match.c  md5.c  memory.c  network.c  numnicks.c  packet.c  parse.c  proc  res.c  res_comp.c  res_init.c  res_mkquery.c  res_skipname.c  s_auth.c  s_bsd.c  s_conf.c  s_conf.c.tmp  (+25 more)
ircd/src/crypt/: mkpasswd.c
ircd/test/: addcn.sh  extra  mkconf.sh  mktest.sh  rmtest.sh  spawn.sh
ircd/tools/: Makefile.in  crypter  mkmd5.c
services/: LICENSE  Makefile.am  Makefile.in  README  acconfig.h  acinclude.m4  aclocal.m4  akill.c  autocmd.pl  chanserv.c  chanserv.h  chantrig.c  chantrig.h  clone.c  clone.h  commands  conf.c  config.h.in  configure  configure.in  credits.c  db.c  db.h  email.cc  email.h  example.help  gameserv.c  gameserv.h  hash.c  hash.h  help.c  helpfile.cc  helpfile.h  infoserv.c  infoserv.h  interp.cc  interp.h  log.cc  log.h  macro.h  (+31 more)
services/chanserv/: README  parse.pl
services/docs/: admin2.html  adms.html  config.html  confman.html  confopt.html  confrec.html  contrib-draft.txt  copy.html  fdl.html  index.html  install.html  intro.html  ipc.html  ipcalter.html  ipcauth.html  ipcquery.html  main.dox  manual.html  overview.html  preinstall.html  queue.dox  services.conf.example  services.xml  services.xsl  useridx.plan
services/docs/ex/: class.ex  entity.ex  file.tmpl  func.tmpl
services/hash/: Makefile.am  Makefile.in  PROTOCOL  auth-epic.irc  auth.irc  md5-prep.c  md5.c  md5.h  md5pw.h  passwd.c
services/nickserv/: README  parse.pl
services/operserv/: README  parse.pl
services/sql/: akill.sql  akill_setter.sql  article.sql  clonerule.sql
services/stats/: Makefile  serv.gnuplot
services/tests/: Makefile.am  Makefile.in  chanserv_test.cc  chanserv_test.h  email_test.cc  email_test.h  passwd_test.cc  passwd_test.h  run_test.cc  stuff_test.cc  stuff_test.h  test_list.c  test_parse.c  timestr_test.cc  timestr_test.h  tool_cmd.c
services/tools/: Doxyfile  Makefile  Sipc.pm  auth_chan.pl  backup  chanparse.c  chowmany.c  corename.sh  cregexp.plot  cron  cs_info.pl  emails.plot  gen.c  ipc.php  ipclib.php  ipclib2.php  laxp.c  laxpc.c  listoper  m.pl  makemotd  mp.c  nhowmany.c  nickparse.c  nicks.plot  ns_info.pl  read2xml.c  regexp.plot  restart.sh  setpass.php  stats.c  stats.sh  stats.xsl
